src/ir/archive/ir_parser.output
Grammar

    0 $accept: input "end of file"

    1 input: metadata_def_list type_def_list function_def_list

    2 metadata_def_list: %empty
    3                  | metadata_def_list metadata_def

    4 metadata_def: STRING_LITERAL COLON STRING_LITERAL

    5 function_def_list: %empty
    6                  | function_def_list function_def

    7 type_def_list: %empty
    8              | type_def_list type_def

    9 type_def: TYPE IDENTIFIER LBRACE type_field_list RBRACE

   10 type_field_list: %empty
   11                | type_field_list type_field

   12 type_field: ir_identifier_type IDENTIFIER SEMICOLON
   13           | ir_identifier_type STAR IDENTIFIER SEMICOLON

   14 function_def: DEF ir_identifier_type IDENTIFIER function_arg_list LBRACE basic_block_list RBRACE
   15             | DEF ir_identifier_type STAR IDENTIFIER function_arg_list LBRACE basic_block_list RBRACE
   16             | DEF ir_identifier_type IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE
   17             | DEF ir_identifier_type STAR IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE

   18 function_arg_list: LPAREN RPAREN
   19                  | LPAREN function_arg_list_core RPAREN

   20 function_arg_list_core: function_arg
   21                       | function_arg_list_core COMMA function_arg

   22 function_arg: ir_identifier_type IDENTIFIER
   23             | ir_identifier_type STAR IDENTIFIER

   24 basic_block_list: %empty
   25                 | basic_block_list basic_block

   26 basic_block: IDENTIFIER COLON instruction_group

   27 instruction_group: instruction
   28                  | instruction_group instruction

   29 instruction: identifier ASSIGN expr SEMICOLON
   30            | expr SEMICOLON

   31 expr: OPCODE instruction_options
   32     | OPCODE instruction_options ir_identifier_type
   33     | OPCODE instruction_options operand_list
   34     | OPCODE instruction_options operand_list label_list
   35     | OPCODE instruction_options ir_identifier_type operand_list
   36     | OPCODE instruction_options ir_identifier_type operand_list label_list

   37 instruction_options: %empty
   38                    | LBRACKET instruction_option_list RBRACKET

   39 instruction_option_list: IDENTIFIER
   40                        | instruction_option_list IDENTIFIER

   41 label_list: LBRACKET label_list_core RBRACKET

   42 label_list_core: label
   43                | label_list_core COMMA label

   44 label: LABEL POND IDENTIFIER

   45 operand_list: operand
   46             | operand_list operand

   47 operand: ir_value
   48        | identifier

   49 identifier: PERCENT IDENTIFIER

   50 ir_identifier_type: IDENTIFIER
   51                   | ir_value_type
   52                   | ir_value_type_array

   53 ir_value: ir_value_type_short_integer_numeric DECIMALINTEGER
   54         | ir_value_type_long_integer_numeric DECIMALINTEGER
   55         | TYPE_NAME_SPF FLOATINGNUM
   56         | TYPE_NAME_DPF FLOATINGNUM
   57         | ir_value_type_string STRING_LITERAL
   58         | TYPE_NAME_BOOLEAN BOOLEAN_CONSTANT
   59         | TYPE_NAME_BOOLEAN DECIMALINTEGER

   60 ir_value_type: ir_value_type_integer_numeric
   61              | ir_value_type_floating_numeric
   62              | ir_value_type_string
   63              | TYPE_NAME_VOID
   64              | TYPE_NAME_BOOLEAN
   65              | TYPE_NAME_OBJECT

   66 ir_value_type_array: ARRAY LBRACKET DECIMALINTEGER STAR ir_identifier_type RBRACKET

   67 ir_value_type_string: TYPE_NAME_STRING

   68 ir_value_type_floating_numeric: TYPE_NAME_SPF
   69                               | TYPE_NAME_DPF

   70 ir_value_type_integer_numeric: ir_value_type_short_integer_numeric
   71                              | ir_value_type_long_integer_numeric

   72 ir_value_type_long_integer_numeric: TYPE_NAME_I64
   73                                   | TYPE_NAME_UI64

   74 ir_value_type_short_integer_numeric: TYPE_NAME_I8
   75                                    | TYPE_NAME_UI8
   76                                    | TYPE_NAME_I16
   77                                    | TYPE_NAME_UI16
   78                                    | TYPE_NAME_I32
   79                                    | TYPE_NAME_UI32


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
TYPE_NAME_I8 (258) 74
TYPE_NAME_UI8 (259) 75
TYPE_NAME_I16 (260) 76
TYPE_NAME_UI16 (261) 77
TYPE_NAME_I32 (262) 78
TYPE_NAME_UI32 (263) 79
TYPE_NAME_I64 (264) 72
TYPE_NAME_UI64 (265) 73
TYPE_NAME_SPF (266) 55 68
TYPE_NAME_DPF (267) 56 69
TYPE_NAME_BOOLEAN (268) 58 59 64
TYPE_NAME_VOID (269) 63
TYPE_NAME_STRING (270) 67
TYPE_NAME_OBJECT (271) 65
OPCODE (272) 31 32 33 34 35 36
ARRAY (273) 66
DEF (274) 14 15 16 17
TYPE (275) 9
IDENTIFIER (276) 9 12 13 14 15 16 17 22 23 26 39 40 44 49 50
STRING_LITERAL (277) 4 57
DECIMALINTEGER (278) 53 54 59 66
FLOATINGNUM (279) 55 56
BOOLEAN_CONSTANT (280) 58
COMMA (281) 21 43
COLON (282) 4 16 17 26
SEMICOLON (283) 12 13 29 30
PERCENT (284) 49
STAR (285) 13 15 17 23 66
POND (286) 44
ASSIGN (287) 29
LPAREN (288) 18 19
RPAREN (289) 18 19
LBRACKET (290) 38 41 66
RBRACKET (291) 38 41 66
LBRACE (292) 9 14 15 16 17
RBRACE (293) 9 14 15 16 17
LABEL (294) 44


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
input (41)
    on left: 1, on right: 0
metadata_def_list (42)
    on left: 2 3, on right: 1 3
metadata_def (43)
    on left: 4, on right: 3
function_def_list (44)
    on left: 5 6, on right: 1 6
type_def_list (45)
    on left: 7 8, on right: 1 8
type_def (46)
    on left: 9, on right: 8
type_field_list (47)
    on left: 10 11, on right: 9 11
type_field (48)
    on left: 12 13, on right: 11
function_def (49)
    on left: 14 15 16 17, on right: 6
function_arg_list (50)
    on left: 18 19, on right: 14 15 16 17
function_arg_list_core (51)
    on left: 20 21, on right: 19 21
function_arg (52)
    on left: 22 23, on right: 20 21
basic_block_list (53)
    on left: 24 25, on right: 14 15 16 17 25
basic_block (54)
    on left: 26, on right: 25
instruction_group (55)
    on left: 27 28, on right: 26 28
instruction (56)
    on left: 29 30, on right: 27 28
expr (57)
    on left: 31 32 33 34 35 36, on right: 29 30
instruction_options (58)
    on left: 37 38, on right: 31 32 33 34 35 36
instruction_option_list (59)
    on left: 39 40, on right: 38 40
label_list (60)
    on left: 41, on right: 34 36
label_list_core (61)
    on left: 42 43, on right: 41 43
label (62)
    on left: 44, on right: 42 43
operand_list (63)
    on left: 45 46, on right: 33 34 35 36 46
operand (64)
    on left: 47 48, on right: 45 46
identifier (65)
    on left: 49, on right: 29 48
ir_identifier_type (66)
    on left: 50 51 52, on right: 12 13 14 15 16 17 22 23 32 35 36 66
ir_value (67)
    on left: 53 54 55 56 57 58 59, on right: 47
ir_value_type (68)
    on left: 60 61 62 63 64 65, on right: 51
ir_value_type_array (69)
    on left: 66, on right: 52
ir_value_type_string (70)
    on left: 67, on right: 57 62
ir_value_type_floating_numeric (71)
    on left: 68 69, on right: 61
ir_value_type_integer_numeric (72)
    on left: 70 71, on right: 60
ir_value_type_long_integer_numeric (73)
    on left: 72 73, on right: 54 71
ir_value_type_short_integer_numeric (74)
    on left: 74 75 76 77 78 79, on right: 53 70


State 0

    0 $accept: . input "end of file"

    $default  reduce using rule 2 (metadata_def_list)

    input              go to state 1
    metadata_def_list  go to state 2


State 1

    0 $accept: input . "end of file"

    "end of file"  shift, and go to state 3


State 2

    1 input: metadata_def_list . type_def_list function_def_list
    3 metadata_def_list: metadata_def_list . metadata_def

    STRING_LITERAL  shift, and go to state 4

    $default  reduce using rule 7 (type_def_list)

    metadata_def   go to state 5
    type_def_list  go to state 6


State 3

    0 $accept: input "end of file" .

    $default  accept


State 4

    4 metadata_def: STRING_LITERAL . COLON STRING_LITERAL

    COLON  shift, and go to state 7


State 5

    3 metadata_def_list: metadata_def_list metadata_def .

    $default  reduce using rule 3 (metadata_def_list)


State 6

    1 input: metadata_def_list type_def_list . function_def_list
    8 type_def_list: type_def_list . type_def

    TYPE  shift, and go to state 8

    $default  reduce using rule 5 (function_def_list)

    function_def_list  go to state 9
    type_def           go to state 10


State 7

    4 metadata_def: STRING_LITERAL COLON . STRING_LITERAL

    STRING_LITERAL  shift, and go to state 11


State 8

    9 type_def: TYPE . IDENTIFIER LBRACE type_field_list RBRACE

    IDENTIFIER  shift, and go to state 12


State 9

    1 input: metadata_def_list type_def_list function_def_list .
    6 function_def_list: function_def_list . function_def

    DEF  shift, and go to state 13

    $default  reduce using rule 1 (input)

    function_def  go to state 14


State 10

    8 type_def_list: type_def_list type_def .

    $default  reduce using rule 8 (type_def_list)


State 11

    4 metadata_def: STRING_LITERAL COLON STRING_LITERAL .

    $default  reduce using rule 4 (metadata_def)


State 12

    9 type_def: TYPE IDENTIFIER . LBRACE type_field_list RBRACE

    LBRACE  shift, and go to state 15


State 13

   14 function_def: DEF . ir_identifier_type IDENTIFIER function_arg_list LBRACE basic_block_list RBRACE
   15             | DEF . ir_identifier_type STAR IDENTIFIER function_arg_list LBRACE basic_block_list RBRACE
   16             | DEF . ir_identifier_type IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE
   17             | DEF . ir_identifier_type STAR IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE

    TYPE_NAME_I8       shift, and go to state 16
    TYPE_NAME_UI8      shift, and go to state 17
    TYPE_NAME_I16      shift, and go to state 18
    TYPE_NAME_UI16     shift, and go to state 19
    TYPE_NAME_I32      shift, and go to state 20
    TYPE_NAME_UI32     shift, and go to state 21
    TYPE_NAME_I64      shift, and go to state 22
    TYPE_NAME_UI64     shift, and go to state 23
    TYPE_NAME_SPF      shift, and go to state 24
    TYPE_NAME_DPF      shift, and go to state 25
    TYPE_NAME_BOOLEAN  shift, and go to state 26
    TYPE_NAME_VOID     shift, and go to state 27
    TYPE_NAME_STRING   shift, and go to state 28
    TYPE_NAME_OBJECT   shift, and go to state 29
    ARRAY              shift, and go to state 30
    IDENTIFIER         shift, and go to state 31

    ir_identifier_type                   go to state 32
    ir_value_type                        go to state 33
    ir_value_type_array                  go to state 34
    ir_value_type_string                 go to state 35
    ir_value_type_floating_numeric       go to state 36
    ir_value_type_integer_numeric        go to state 37
    ir_value_type_long_integer_numeric   go to state 38
    ir_value_type_short_integer_numeric  go to state 39


State 14

    6 function_def_list: function_def_list function_def .

    $default  reduce using rule 6 (function_def_list)


State 15

    9 type_def: TYPE IDENTIFIER LBRACE . type_field_list RBRACE

    $default  reduce using rule 10 (type_field_list)

    type_field_list  go to state 40


State 16

   74 ir_value_type_short_integer_numeric: TYPE_NAME_I8 .

    $default  reduce using rule 74 (ir_value_type_short_integer_numeric)


State 17

   75 ir_value_type_short_integer_numeric: TYPE_NAME_UI8 .

    $default  reduce using rule 75 (ir_value_type_short_integer_numeric)


State 18

   76 ir_value_type_short_integer_numeric: TYPE_NAME_I16 .

    $default  reduce using rule 76 (ir_value_type_short_integer_numeric)


State 19

   77 ir_value_type_short_integer_numeric: TYPE_NAME_UI16 .

    $default  reduce using rule 77 (ir_value_type_short_integer_numeric)


State 20

   78 ir_value_type_short_integer_numeric: TYPE_NAME_I32 .

    $default  reduce using rule 78 (ir_value_type_short_integer_numeric)


State 21

   79 ir_value_type_short_integer_numeric: TYPE_NAME_UI32 .

    $default  reduce using rule 79 (ir_value_type_short_integer_numeric)


State 22

   72 ir_value_type_long_integer_numeric: TYPE_NAME_I64 .

    $default  reduce using rule 72 (ir_value_type_long_integer_numeric)


State 23

   73 ir_value_type_long_integer_numeric: TYPE_NAME_UI64 .

    $default  reduce using rule 73 (ir_value_type_long_integer_numeric)


State 24

   68 ir_value_type_floating_numeric: TYPE_NAME_SPF .

    $default  reduce using rule 68 (ir_value_type_floating_numeric)


State 25

   69 ir_value_type_floating_numeric: TYPE_NAME_DPF .

    $default  reduce using rule 69 (ir_value_type_floating_numeric)


State 26

   64 ir_value_type: TYPE_NAME_BOOLEAN .

    $default  reduce using rule 64 (ir_value_type)


State 27

   63 ir_value_type: TYPE_NAME_VOID .

    $default  reduce using rule 63 (ir_value_type)


State 28

   67 ir_value_type_string: TYPE_NAME_STRING .

    $default  reduce using rule 67 (ir_value_type_string)


State 29

   65 ir_value_type: TYPE_NAME_OBJECT .

    $default  reduce using rule 65 (ir_value_type)


State 30

   66 ir_value_type_array: ARRAY . LBRACKET DECIMALINTEGER STAR ir_identifier_type RBRACKET

    LBRACKET  shift, and go to state 41


State 31

   50 ir_identifier_type: IDENTIFIER .

    $default  reduce using rule 50 (ir_identifier_type)


State 32

   14 function_def: DEF ir_identifier_type . IDENTIFIER function_arg_list LBRACE basic_block_list RBRACE
   15             | DEF ir_identifier_type . STAR IDENTIFIER function_arg_list LBRACE basic_block_list RBRACE
   16             | DEF ir_identifier_type . IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE
   17             | DEF ir_identifier_type . STAR IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE

    IDENTIFIER  shift, and go to state 42
    STAR        shift, and go to state 43


State 33

   51 ir_identifier_type: ir_value_type .

    $default  reduce using rule 51 (ir_identifier_type)


State 34

   52 ir_identifier_type: ir_value_type_array .

    $default  reduce using rule 52 (ir_identifier_type)


State 35

   62 ir_value_type: ir_value_type_string .

    $default  reduce using rule 62 (ir_value_type)


State 36

   61 ir_value_type: ir_value_type_floating_numeric .

    $default  reduce using rule 61 (ir_value_type)


State 37

   60 ir_value_type: ir_value_type_integer_numeric .

    $default  reduce using rule 60 (ir_value_type)


State 38

   71 ir_value_type_integer_numeric: ir_value_type_long_integer_numeric .

    $default  reduce using rule 71 (ir_value_type_integer_numeric)


State 39

   70 ir_value_type_integer_numeric: ir_value_type_short_integer_numeric .

    $default  reduce using rule 70 (ir_value_type_integer_numeric)


State 40

    9 type_def: TYPE IDENTIFIER LBRACE type_field_list . RBRACE
   11 type_field_list: type_field_list . type_field

    TYPE_NAME_I8       shift, and go to state 16
    TYPE_NAME_UI8      shift, and go to state 17
    TYPE_NAME_I16      shift, and go to state 18
    TYPE_NAME_UI16     shift, and go to state 19
    TYPE_NAME_I32      shift, and go to state 20
    TYPE_NAME_UI32     shift, and go to state 21
    TYPE_NAME_I64      shift, and go to state 22
    TYPE_NAME_UI64     shift, and go to state 23
    TYPE_NAME_SPF      shift, and go to state 24
    TYPE_NAME_DPF      shift, and go to state 25
    TYPE_NAME_BOOLEAN  shift, and go to state 26
    TYPE_NAME_VOID     shift, and go to state 27
    TYPE_NAME_STRING   shift, and go to state 28
    TYPE_NAME_OBJECT   shift, and go to state 29
    ARRAY              shift, and go to state 30
    IDENTIFIER         shift, and go to state 31
    RBRACE             shift, and go to state 44

    type_field                           go to state 45
    ir_identifier_type                   go to state 46
    ir_value_type                        go to state 33
    ir_value_type_array                  go to state 34
    ir_value_type_string                 go to state 35
    ir_value_type_floating_numeric       go to state 36
    ir_value_type_integer_numeric        go to state 37
    ir_value_type_long_integer_numeric   go to state 38
    ir_value_type_short_integer_numeric  go to state 39


State 41

   66 ir_value_type_array: ARRAY LBRACKET . DECIMALINTEGER STAR ir_identifier_type RBRACKET

    DECIMALINTEGER  shift, and go to state 47


State 42

   14 function_def: DEF ir_identifier_type IDENTIFIER . function_arg_list LBRACE basic_block_list RBRACE
   16             | DEF ir_identifier_type IDENTIFIER . function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE

    LPAREN  shift, and go to state 48

    function_arg_list  go to state 49


State 43

   15 function_def: DEF ir_identifier_type STAR . IDENTIFIER function_arg_list LBRACE basic_block_list RBRACE
   17             | DEF ir_identifier_type STAR . IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE

    IDENTIFIER  shift, and go to state 50


State 44

    9 type_def: TYPE IDENTIFIER LBRACE type_field_list RBRACE .

    $default  reduce using rule 9 (type_def)


State 45

   11 type_field_list: type_field_list type_field .

    $default  reduce using rule 11 (type_field_list)


State 46

   12 type_field: ir_identifier_type . IDENTIFIER SEMICOLON
   13           | ir_identifier_type . STAR IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 51
    STAR        shift, and go to state 52


State 47

   66 ir_value_type_array: ARRAY LBRACKET DECIMALINTEGER . STAR ir_identifier_type RBRACKET

    STAR  shift, and go to state 53


State 48

   18 function_arg_list: LPAREN . RPAREN
   19                  | LPAREN . function_arg_list_core RPAREN

    TYPE_NAME_I8       shift, and go to state 16
    TYPE_NAME_UI8      shift, and go to state 17
    TYPE_NAME_I16      shift, and go to state 18
    TYPE_NAME_UI16     shift, and go to state 19
    TYPE_NAME_I32      shift, and go to state 20
    TYPE_NAME_UI32     shift, and go to state 21
    TYPE_NAME_I64      shift, and go to state 22
    TYPE_NAME_UI64     shift, and go to state 23
    TYPE_NAME_SPF      shift, and go to state 24
    TYPE_NAME_DPF      shift, and go to state 25
    TYPE_NAME_BOOLEAN  shift, and go to state 26
    TYPE_NAME_VOID     shift, and go to state 27
    TYPE_NAME_STRING   shift, and go to state 28
    TYPE_NAME_OBJECT   shift, and go to state 29
    ARRAY              shift, and go to state 30
    IDENTIFIER         shift, and go to state 31
    RPAREN             shift, and go to state 54

    function_arg_list_core               go to state 55
    function_arg                         go to state 56
    ir_identifier_type                   go to state 57
    ir_value_type                        go to state 33
    ir_value_type_array                  go to state 34
    ir_value_type_string                 go to state 35
    ir_value_type_floating_numeric       go to state 36
    ir_value_type_integer_numeric        go to state 37
    ir_value_type_long_integer_numeric   go to state 38
    ir_value_type_short_integer_numeric  go to state 39


State 49

   14 function_def: DEF ir_identifier_type IDENTIFIER function_arg_list . LBRACE basic_block_list RBRACE
   16             | DEF ir_identifier_type IDENTIFIER function_arg_list . COLON IDENTIFIER LBRACE basic_block_list RBRACE

    COLON   shift, and go to state 58
    LBRACE  shift, and go to state 59


State 50

   15 function_def: DEF ir_identifier_type STAR IDENTIFIER . function_arg_list LBRACE basic_block_list RBRACE
   17             | DEF ir_identifier_type STAR IDENTIFIER . function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE

    LPAREN  shift, and go to state 48

    function_arg_list  go to state 60


State 51

   12 type_field: ir_identifier_type IDENTIFIER . SEMICOLON

    SEMICOLON  shift, and go to state 61


State 52

   13 type_field: ir_identifier_type STAR . IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 62


State 53

   66 ir_value_type_array: ARRAY LBRACKET DECIMALINTEGER STAR . ir_identifier_type RBRACKET

    TYPE_NAME_I8       shift, and go to state 16
    TYPE_NAME_UI8      shift, and go to state 17
    TYPE_NAME_I16      shift, and go to state 18
    TYPE_NAME_UI16     shift, and go to state 19
    TYPE_NAME_I32      shift, and go to state 20
    TYPE_NAME_UI32     shift, and go to state 21
    TYPE_NAME_I64      shift, and go to state 22
    TYPE_NAME_UI64     shift, and go to state 23
    TYPE_NAME_SPF      shift, and go to state 24
    TYPE_NAME_DPF      shift, and go to state 25
    TYPE_NAME_BOOLEAN  shift, and go to state 26
    TYPE_NAME_VOID     shift, and go to state 27
    TYPE_NAME_STRING   shift, and go to state 28
    TYPE_NAME_OBJECT   shift, and go to state 29
    ARRAY              shift, and go to state 30
    IDENTIFIER         shift, and go to state 31

    ir_identifier_type                   go to state 63
    ir_value_type                        go to state 33
    ir_value_type_array                  go to state 34
    ir_value_type_string                 go to state 35
    ir_value_type_floating_numeric       go to state 36
    ir_value_type_integer_numeric        go to state 37
    ir_value_type_long_integer_numeric   go to state 38
    ir_value_type_short_integer_numeric  go to state 39


State 54

   18 function_arg_list: LPAREN RPAREN .

    $default  reduce using rule 18 (function_arg_list)


State 55

   19 function_arg_list: LPAREN function_arg_list_core . RPAREN
   21 function_arg_list_core: function_arg_list_core . COMMA function_arg

    COMMA   shift, and go to state 64
    RPAREN  shift, and go to state 65


State 56

   20 function_arg_list_core: function_arg .

    $default  reduce using rule 20 (function_arg_list_core)


State 57

   22 function_arg: ir_identifier_type . IDENTIFIER
   23             | ir_identifier_type . STAR IDENTIFIER

    IDENTIFIER  shift, and go to state 66
    STAR        shift, and go to state 67


State 58

   16 function_def: DEF ir_identifier_type IDENTIFIER function_arg_list COLON . IDENTIFIER LBRACE basic_block_list RBRACE

    IDENTIFIER  shift, and go to state 68


State 59

   14 function_def: DEF ir_identifier_type IDENTIFIER function_arg_list LBRACE . basic_block_list RBRACE

    $default  reduce using rule 24 (basic_block_list)

    basic_block_list  go to state 69


State 60

   15 function_def: DEF ir_identifier_type STAR IDENTIFIER function_arg_list . LBRACE basic_block_list RBRACE
   17             | DEF ir_identifier_type STAR IDENTIFIER function_arg_list . COLON IDENTIFIER LBRACE basic_block_list RBRACE

    COLON   shift, and go to state 70
    LBRACE  shift, and go to state 71


State 61

   12 type_field: ir_identifier_type IDENTIFIER SEMICOLON .

    $default  reduce using rule 12 (type_field)


State 62

   13 type_field: ir_identifier_type STAR IDENTIFIER . SEMICOLON

    SEMICOLON  shift, and go to state 72


State 63

   66 ir_value_type_array: ARRAY LBRACKET DECIMALINTEGER STAR ir_identifier_type . RBRACKET

    RBRACKET  shift, and go to state 73


State 64

   21 function_arg_list_core: function_arg_list_core COMMA . function_arg

    TYPE_NAME_I8       shift, and go to state 16
    TYPE_NAME_UI8      shift, and go to state 17
    TYPE_NAME_I16      shift, and go to state 18
    TYPE_NAME_UI16     shift, and go to state 19
    TYPE_NAME_I32      shift, and go to state 20
    TYPE_NAME_UI32     shift, and go to state 21
    TYPE_NAME_I64      shift, and go to state 22
    TYPE_NAME_UI64     shift, and go to state 23
    TYPE_NAME_SPF      shift, and go to state 24
    TYPE_NAME_DPF      shift, and go to state 25
    TYPE_NAME_BOOLEAN  shift, and go to state 26
    TYPE_NAME_VOID     shift, and go to state 27
    TYPE_NAME_STRING   shift, and go to state 28
    TYPE_NAME_OBJECT   shift, and go to state 29
    ARRAY              shift, and go to state 30
    IDENTIFIER         shift, and go to state 31

    function_arg                         go to state 74
    ir_identifier_type                   go to state 57
    ir_value_type                        go to state 33
    ir_value_type_array                  go to state 34
    ir_value_type_string                 go to state 35
    ir_value_type_floating_numeric       go to state 36
    ir_value_type_integer_numeric        go to state 37
    ir_value_type_long_integer_numeric   go to state 38
    ir_value_type_short_integer_numeric  go to state 39


State 65

   19 function_arg_list: LPAREN function_arg_list_core RPAREN .

    $default  reduce using rule 19 (function_arg_list)


State 66

   22 function_arg: ir_identifier_type IDENTIFIER .

    $default  reduce using rule 22 (function_arg)


State 67

   23 function_arg: ir_identifier_type STAR . IDENTIFIER

    IDENTIFIER  shift, and go to state 75


State 68

   16 function_def: DEF ir_identifier_type IDENTIFIER function_arg_list COLON IDENTIFIER . LBRACE basic_block_list RBRACE

    LBRACE  shift, and go to state 76


State 69

   14 function_def: DEF ir_identifier_type IDENTIFIER function_arg_list LBRACE basic_block_list . RBRACE
   25 basic_block_list: basic_block_list . basic_block

    IDENTIFIER  shift, and go to state 77
    RBRACE      shift, and go to state 78

    basic_block  go to state 79


State 70

   17 function_def: DEF ir_identifier_type STAR IDENTIFIER function_arg_list COLON . IDENTIFIER LBRACE basic_block_list RBRACE

    IDENTIFIER  shift, and go to state 80


State 71

   15 function_def: DEF ir_identifier_type STAR IDENTIFIER function_arg_list LBRACE . basic_block_list RBRACE

    $default  reduce using rule 24 (basic_block_list)

    basic_block_list  go to state 81


State 72

   13 type_field: ir_identifier_type STAR IDENTIFIER SEMICOLON .

    $default  reduce using rule 13 (type_field)


State 73

   66 ir_value_type_array: ARRAY LBRACKET DECIMALINTEGER STAR ir_identifier_type RBRACKET .

    $default  reduce using rule 66 (ir_value_type_array)


State 74

   21 function_arg_list_core: function_arg_list_core COMMA function_arg .

    $default  reduce using rule 21 (function_arg_list_core)


State 75

   23 function_arg: ir_identifier_type STAR IDENTIFIER .

    $default  reduce using rule 23 (function_arg)


State 76

   16 function_def: DEF ir_identifier_type IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE . basic_block_list RBRACE

    $default  reduce using rule 24 (basic_block_list)

    basic_block_list  go to state 82


State 77

   26 basic_block: IDENTIFIER . COLON instruction_group

    COLON  shift, and go to state 83


State 78

   14 function_def: DEF ir_identifier_type IDENTIFIER function_arg_list LBRACE basic_block_list RBRACE .

    $default  reduce using rule 14 (function_def)


State 79

   25 basic_block_list: basic_block_list basic_block .

    $default  reduce using rule 25 (basic_block_list)


State 80

   17 function_def: DEF ir_identifier_type STAR IDENTIFIER function_arg_list COLON IDENTIFIER . LBRACE basic_block_list RBRACE

    LBRACE  shift, and go to state 84


State 81

   15 function_def: DEF ir_identifier_type STAR IDENTIFIER function_arg_list LBRACE basic_block_list . RBRACE
   25 basic_block_list: basic_block_list . basic_block

    IDENTIFIER  shift, and go to state 77
    RBRACE      shift, and go to state 85

    basic_block  go to state 79


State 82

   16 function_def: DEF ir_identifier_type IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE basic_block_list . RBRACE
   25 basic_block_list: basic_block_list . basic_block

    IDENTIFIER  shift, and go to state 77
    RBRACE      shift, and go to state 86

    basic_block  go to state 79


State 83

   26 basic_block: IDENTIFIER COLON . instruction_group

    OPCODE   shift, and go to state 87
    PERCENT  shift, and go to state 88

    instruction_group  go to state 89
    instruction        go to state 90
    expr               go to state 91
    identifier         go to state 92


State 84

   17 function_def: DEF ir_identifier_type STAR IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE . basic_block_list RBRACE

    $default  reduce using rule 24 (basic_block_list)

    basic_block_list  go to state 93


State 85

   15 function_def: DEF ir_identifier_type STAR IDENTIFIER function_arg_list LBRACE basic_block_list RBRACE .

    $default  reduce using rule 15 (function_def)


State 86

   16 function_def: DEF ir_identifier_type IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE .

    $default  reduce using rule 16 (function_def)


State 87

   31 expr: OPCODE . instruction_options
   32     | OPCODE . instruction_options ir_identifier_type
   33     | OPCODE . instruction_options operand_list
   34     | OPCODE . instruction_options operand_list label_list
   35     | OPCODE . instruction_options ir_identifier_type operand_list
   36     | OPCODE . instruction_options ir_identifier_type operand_list label_list

    LBRACKET  shift, and go to state 94

    $default  reduce using rule 37 (instruction_options)

    instruction_options  go to state 95


State 88

   49 identifier: PERCENT . IDENTIFIER

    IDENTIFIER  shift, and go to state 96


State 89

   26 basic_block: IDENTIFIER COLON instruction_group .
   28 instruction_group: instruction_group . instruction

    OPCODE   shift, and go to state 87
    PERCENT  shift, and go to state 88

    $default  reduce using rule 26 (basic_block)

    instruction  go to state 97
    expr         go to state 91
    identifier   go to state 92


State 90

   27 instruction_group: instruction .

    $default  reduce using rule 27 (instruction_group)


State 91

   30 instruction: expr . SEMICOLON

    SEMICOLON  shift, and go to state 98


State 92

   29 instruction: identifier . ASSIGN expr SEMICOLON

    ASSIGN  shift, and go to state 99


State 93

   17 function_def: DEF ir_identifier_type STAR IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE basic_block_list . RBRACE
   25 basic_block_list: basic_block_list . basic_block

    IDENTIFIER  shift, and go to state 77
    RBRACE      shift, and go to state 100

    basic_block  go to state 79


State 94

   38 instruction_options: LBRACKET . instruction_option_list RBRACKET

    IDENTIFIER  shift, and go to state 101

    instruction_option_list  go to state 102


State 95

   31 expr: OPCODE instruction_options .
   32     | OPCODE instruction_options . ir_identifier_type
   33     | OPCODE instruction_options . operand_list
   34     | OPCODE instruction_options . operand_list label_list
   35     | OPCODE instruction_options . ir_identifier_type operand_list
   36     | OPCODE instruction_options . ir_identifier_type operand_list label_list

    TYPE_NAME_I8       shift, and go to state 16
    TYPE_NAME_UI8      shift, and go to state 17
    TYPE_NAME_I16      shift, and go to state 18
    TYPE_NAME_UI16     shift, and go to state 19
    TYPE_NAME_I32      shift, and go to state 20
    TYPE_NAME_UI32     shift, and go to state 21
    TYPE_NAME_I64      shift, and go to state 22
    TYPE_NAME_UI64     shift, and go to state 23
    TYPE_NAME_SPF      shift, and go to state 103
    TYPE_NAME_DPF      shift, and go to state 104
    TYPE_NAME_BOOLEAN  shift, and go to state 105
    TYPE_NAME_VOID     shift, and go to state 27
    TYPE_NAME_STRING   shift, and go to state 28
    TYPE_NAME_OBJECT   shift, and go to state 29
    ARRAY              shift, and go to state 30
    IDENTIFIER         shift, and go to state 31
    PERCENT            shift, and go to state 88

    $default  reduce using rule 31 (expr)

    operand_list                         go to state 106
    operand                              go to state 107
    identifier                           go to state 108
    ir_identifier_type                   go to state 109
    ir_value                             go to state 110
    ir_value_type                        go to state 33
    ir_value_type_array                  go to state 34
    ir_value_type_string                 go to state 111
    ir_value_type_floating_numeric       go to state 36
    ir_value_type_integer_numeric        go to state 37
    ir_value_type_long_integer_numeric   go to state 112
    ir_value_type_short_integer_numeric  go to state 113


State 96

   49 identifier: PERCENT IDENTIFIER .

    $default  reduce using rule 49 (identifier)


State 97

   28 instruction_group: instruction_group instruction .

    $default  reduce using rule 28 (instruction_group)


State 98

   30 instruction: expr SEMICOLON .

    $default  reduce using rule 30 (instruction)


State 99

   29 instruction: identifier ASSIGN . expr SEMICOLON

    OPCODE  shift, and go to state 87

    expr  go to state 114


State 100

   17 function_def: DEF ir_identifier_type STAR IDENTIFIER function_arg_list COLON IDENTIFIER LBRACE basic_block_list RBRACE .

    $default  reduce using rule 17 (function_def)


State 101

   39 instruction_option_list: IDENTIFIER .

    $default  reduce using rule 39 (instruction_option_list)


State 102

   38 instruction_options: LBRACKET instruction_option_list . RBRACKET
   40 instruction_option_list: instruction_option_list . IDENTIFIER

    IDENTIFIER  shift, and go to state 115
    RBRACKET    shift, and go to state 116


State 103
